The fifth commit

--- a/src/execution/physical_plan/CMakeLists.txt
+++ b/src/execution/physical_plan/CMakeLists.txt
@@ -9,6 +9,7 @@ add_library_unity(
   plan_copy_database.cpp
   plan_copy_to_file.cpp
   plan_create.cpp
+  plan_create_bf.cpp
   plan_create_index.cpp
   plan_create_table.cpp
   plan_create_secret.cpp
