--- a/src/planner/operator/CMakeLists.txt
+++ b/src/planner/operator/CMakeLists.txt
@@ -44,6 +44,7 @@ add_library_unity(
   logical_unconditional_join.cpp
   logical_unnest.cpp
   logical_update.cpp
+  logical_use_bf.cpp
   logical_window.cpp)
 set(ALL_OBJECT_FILES
     ${ALL_OBJECT_FILES} $<TARGET_OBJECTS:duckdb_planner_operator>
