--- a/src/optimizer/predicate_transfer/hash_filter/CMakeLists.txt
+++ b/src/optimizer/predicate_transfer/hash_filter/CMakeLists.txt
@@ -1,8 +1,9 @@
 add_library_unity(
   duckdb_hash_filter
   OBJECT
+  hash_filter_use_kernel.cpp
   hash_filter.cpp
-  hash_filter_use_kernel.cpp)
+  hashtable.cpp)
 set(ALL_OBJECT_FILES
     ${ALL_OBJECT_FILES} $<TARGET_OBJECTS:duckdb_hash_filter>
     PARENT_SCOPE)
